2006-01-21  Julien MOUTTE  <julien@moutte.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_close): We might open without being closed.
	* src/totem.c: (totem_action_set_mrl_with_warning): More
	safety check on GError existence. Fixes #327579.

2006-01-21  Julien MOUTTE  <julien@moutte.net>

	* src/backend/bacon-video-widget-gst-0.10.c: (parse_stream_info),
	(bacon_video_widget_finalize),
	(bacon_video_widget_open_with_subtitle), (setup_vis),
	(bacon_video_widget_set_show_visuals),
	(bacon_video_widget_set_visuals),
	(bacon_video_widget_set_visuals_quality), (bacon_video_widget_new):
	Refactoring how visualization is handled in 0.10 GStreamer backend.
	Fixes #327532.

2006-01-20  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-message-connection.c: (setup_connection),
	(accept_new_connection), (server_cb), (try_server), (try_client),
	(bacon_message_connection_free): update from CVS to fix a problem
	with concurrent clients

2006-01-19  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_close):
	  Set to NULL state in close as well. Move up debug statement
	  in open. Fix typos in license addendum.

	* src/backend/gstscreenshot.c: (bvw_frame_conv_convert):
	  Don't crash in debug statement when an error with a debug
	  message occurs. Also guard against NULL errors.
	  
============ Version 1.3.1

2006-01-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.3.1

2006-01-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_finalize), (bacon_video_widget_unrealize),
	(bacon_video_widget_open_with_subtitle):
	Do some plugin garbage collection after opening files
	* src/test-properties-page.c: (create_props), (destroy_props),
	(main): create and destroy the pages, instead of just setting a
	different URI
